docroot/themes/custom/ymca/css/style.css
/* ... */
@media screen and (max-width: 767px) {
  .groupex-form-full #location-wrapper .form-group .icon {
    top: 9px;
  }
}
.groupex-form-full #location-wrapper .form-group.checked .inner {
  background-color: #c6188b;
  border-color: #c6188b;
  color: #fff;
}
.groupex-form-full #location-wrapper .form-group.checked .icon {
  color: #f4d1e8;
}
@media screen and (max-width: 767px) {
  .groupex-form-full .group-ex-time,
  .groupex-form-full .group-ex-date,
  .groupex-form-full .help-block {
    margin: 0;
    height: 0;
  }
  .groupex-form-full .group-ex-time label,
  .groupex-form-full .group-ex-date label,
  .groupex-form-full .help-block label {
    display: inline;
  }
  .groupex-form-full #groupex-full-form-wrapper > .form-group {
    margin: 0;
    height: 0;
  }
}

.groupex-results {
  max-height: 600px;
  overflow-y: auto;
  overflow-x: hidden;
  clear: both;
  padding-top: 15px;
}
@media screen and (max-width: 767px) {
  .groupex-results {
    height: auto;
    max-height: none;
    overflow: hidden;
    margin: 0 -15px;
  }
}
.groupex-results table {
  width: 100%;
}
@media screen and (max-width: 991px) {
  .groupex-results table {
    font-size: 12px;
  }
}
.groupex-results table td {
  padding: 20px 15px;
}
@media screen and (max-width: 767px) {
  .groupex-results table td {
    padding: 10px 5px;
  }
}
.groupex-results table td.time-duration {
  color: #1d1d1b;
  max-width: 180px;
}
.groupex-results table td.time-duration .icon-clock {
  color: #d8d8d8;
  margin-right: 10px;
}
.groupex-results table td.time-duration .duration {
  color: #afafae;
  font-style: italic;
  white-space: nowrap;
}
.groupex-results table td.instructor {
  line-height: 14px;
}
@media screen and (max-width: 767px) {
  .groupex-results table td.instructor {
    min-width: 105px;
  }
}
.groupex-results table td.instructor a {
  color: #92288d;
  white-space: nowrap;
}
.groupex-results table td.instructor .icon-user {
  color: #92288d;
  margin-right: 10px;
}
.groupex-results table td.instructor .icon-loop2 {
  font-size: 10px;
  color: #c6188b;
  margin-right: 5px;
  margin-left: 24px;
  font-weight: bold;
}
.groupex-results table td.instructor .sub {
  font-size: 12px;
  color: #c6188b;
}
.groupex-results table tr:nth-child(even) td {
  background-color: #fefefe;
}
.groupex-results table tr:nth-child(odd) td {
  background-color: #f8f8f8;
}
.groupex-results table tr td.caption {
  background-color: #696969;
  text-align: left;
  font-size: 15px;
  font-weight: bold;
  font-family: "Cachet", Arial, sans-serif;
}
.groupex-results table tr td.caption a {
  color: #fff;
}
.groupex-results table tr td.whitebar {
  background-color: #fff;
  padding: 25px;
}
.groupex-results .instructor-display-mode td.instructor * {
  display: none;
}
.groupex-results .day-schedule table {
  margin-bottom: 0;
}

body.node--type-location #groupex-full-form-wrapper #location-wrapper,
body.node--type-location #groupex-full-form-wrapper #location-select-wrapper {
  display: none !important;
}
body.node--type-location #groupex-full-form-wrapper #date-select-wrapper {
  padding-right: 30px;
}

#block-schedulesrightblocks article h2 {
  margin: 0;
  display: block;
  color: #424242;
  text-transform: uppercase;
}
#block-schedulesrightblocks article h2 a {
  color: #424242;
  padding-bottom: 0;
}
@media screen and (max-width: 767px) {
  #block-schedulesrightblocks article h2 a {
    padding-bottom: 10px;
  }
}
#block-schedulesrightblocks article ul {
  margin: 25px 0 30px;
  padding: 0;
}
#block-schedulesrightblocks article ul li {
  list-style: none;
  font-size: 15px;
  margin-bottom: 15px;
}
#block-schedulesrightblocks article ul li:before {
  content: "\f105";
  color: #777777;
  font-family: icomoon;
  list-style: none;
  margin-right: 14px;
  font-weight: bold;
}
#block-schedulesrightblocks #component_153751 .richtext {
  margin-top: 0;
}
#block-schedulesrightblocks #component_153751 .panel-body a {
  border-radius: 5px;
  border: 1px solid #e3c7e1;
  color: #92288d;
  display: inline-block;
  font-size: 16px;
  margin-top: 15px;
  padding: 15px 35px;
  text-transform: uppercase;
  font-family: Cachet;
  font-weight: bold;
}

/*# sourceMappingURL=style.css.map */

